<resources>
    <string name="app_name">Retrofit_version3.0</string>
    <string name="action_settings">Settings</string>
    <string name="Title">TITLE</string>
    <string name="ID">ID</string>
    <string name="añadir">Añadir/Editar</string>
    <string name="Singer">Singer</string>
    <string name="Singeer">SINGER</string>
    <string name="EDIT">EDIT</string>
    <string name="DELETE">DELETE</string>
    <string name="RETURN">RETURN</string>
    <string name="INFORMATION">INFORMATION</string>
    <string name="post">POST</string>
    <string name="edit">EDIT</string>
    <string name="delete">delete</string>
</resources>
